--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-item>
+  <ion-item> <!--menambahkan basemap-->
     <ion-select [(ngModel)]="selectedBasemap" (ionChange)="changeBasemap()">
       <ion-select-option value="topo-vector">Topographic</ion-select-option>
       <ion-select-option value="streets-vector">Streets</ion-select-option>
